Summary list refactored to allow action links ("change") to be omitted without creating misalignment issues in the list Summary list has a new "no border" variant

--- a/src/components/summary-list/_summary-list.scss
+++ b/src/components/summary-list/_summary-list.scss
@@ -20,8 +20,8 @@
     }
 
     &__item {
-        border-bottom: 1px solid $ds_colour__border;
         padding-bottom: 8px;
+        position: relative;
         @include ds_responsive-margin(2, bottom, false, -1px);
     }
 
@@ -29,28 +29,49 @@
     &__answer::after {
         content: '';
     }
+
+    &:not(.ds_summary-list--no-border) {
+        .ds_summary-list__item::after {
+            background: $ds_colour__border;
+            bottom: -1px;
+            content: '';
+            height: 1px;
+            left: 0;
+            position: absolute;
+            right: 0;
+        }
+    }
 }
 
 @include ds_media-query(medium) {
     .ds_summary-list {
+        border-collapse: collapse;
+        display: table;
+        width: 100%;
+
         &__item {
-            display: grid;
-            grid-gap: 0 32px;
-            grid-template-columns: 1fr 1fr auto;
-            grid-template-areas: 'k v a';
+            display: table-row;
+        }
+
+        &__key,
+        &__value,
+        &__actions {
+            display: table-cell;
+            padding: 16px;
         }
 
         &__key {
-            grid-area: k;
+            padding-left: 0;
+            width: 50%;
         }
 
         &__value {
-            grid-area: v;
-            margin-right: 0;
+            width: 50%;
         }
 
         &__actions {
-            grid-area: a;
+            padding-right: 0;
+            text-align: right;
         }
     }
 }
